--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,8 @@
-# TODO: fix font issue, nvim-tmux integration(send commands, window toggle/switch) 
-# nvim color adjustments for new terminal
+# TODO: nvim-tmux integration(send commands, window toggle/switch) 
+
 # faster scroll with control+shift+K 
+# https://robots.thoughtbot.com/running-specs-from-vim-sent-to-tmux-via-tslime
+# https://robots.thoughtbot.com/seamlessly-navigate-vim-and-tmux-splits
 
 #Plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -8,6 +10,11 @@ set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-open'
 
 #Generic
+set -g prefix C-a
+bind C-a send-prefix
+#for nested tmux sessions
+bind-key a send-prefix
+
 set -sg escape-time 0
 set -g base-index 1
 setw -g pane-base-index 1
@@ -45,6 +52,7 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 #Moving between panes with vim movement keys
@@ -65,6 +73,20 @@ bind -r L resize-pane -R 5
 
 #One big session group
 new-session -s main
+# dynamic pane is number 2!!
+split-window -v -t 1 
+
+split-window -h -t 2 
+split-window -h -t 1
+
+select-pane -t 2 
+resize-pane -R 40
+
+select-pane -t 3 
+resize-pane -D 15
+select-pane -t 1
+resize-pane -t 1 -Z # Zooms to pane 1
 
 #Use tmux plugin manager (end)
 run '~/.tmux/plugins/tpm/tpm'
+
