--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,7 +1,9 @@
 # Configuration for Alacritty, the GPU enhanced terminal emulator.
+#
+#
+#
 
-# Any items in the `env` entry below will be added as
-# environment variables. Some entries may override variables
+# Any items in the `env` entry below will be added as environment variables. Some entries may override variables
 # set by alacritty itself.
 env:
   # TERM variable
@@ -51,7 +53,7 @@ window:
   # decorations: transparent 
 
   # When true, alacritty starts maximized.
-  start_maximized: false
+  start_maximized: true 
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -110,7 +112,7 @@ font:
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
   offset:
     x: 0
-    y: 0
+    y: 3
 
   # Glyph offset determines the locations of the glyphs within their cells with
   # the default being at the bottom. Increasing `x` moves the glyph to the right,
@@ -133,7 +135,7 @@ font:
   #
   # This is a global setting and will require a log out or restart to take
   # effect.
-  use_thin_strokes: false 
+  use_thin_strokes: false
 
 # Display the time it takes to redraw each frame.
 render_timer: false
@@ -165,7 +167,7 @@ colors:
   # the cursor color will be the inverse of the cell color.
   cursor:
   #  text: '0x000000'
-    cursor: '0xffffff'
+    cursor: '0x838586'
 
   # Normal colors
   normal:
@@ -305,15 +307,14 @@ cursor:
 
 # Live config reload (changes require restart)
 live_config_reload: true
-
 # Shell
 #
 # You can set `shell.program` to the path of your favorite shell, e.g. `/bin/fish`.
 # Entries in `shell.args` are passed unmodified as arguments to the shell.
-# shell:
-  # program: /bin/fish
-  # args:
-    # - --login
+shell:
+  program: /usr/local/bin/fish 
+  args:
+    - --login
 
 # Key bindings
 #
@@ -398,9 +399,7 @@ key_bindings:
   - { key: C,        mods: Command, action: Copy                         }
   - { key: Paste,                   action: Paste                        }
   - { key: Copy,                    action: Copy                         }
-  - { key: H,        mods: Command, action: Hide                         }
   - { key: Q,        mods: Command, action: Quit                         }
-  - { key: W,        mods: Command, action: Quit                         }
   - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
   - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
   - { key: End,                     chars: "\x1bOF",   mode: AppCursor   }
@@ -408,8 +407,6 @@ key_bindings:
   - { key: Key0,     mods: Command, action: ResetFontSize                }
   - { key: Equals,   mods: Command, action: IncreaseFontSize             }
   - { key: Minus,    mods: Command, action: DecreaseFontSize             }
-  - { key: K,        mods: Command, action: ClearHistory                 }
-  - { key: K,        mods: Command, chars: "\x0c"                        }
   - { key: L,        mods: Control, action: ClearLogNotice               }
   - { key: L,        mods: Control, chars: "\x0c"                        }
   - { key: PageUp,   mods: Shift,   chars: "\x1b[5;2~"                   }
@@ -504,3 +501,121 @@ key_bindings:
   - { key: F11,      mods: Command, chars: "\x1b[23;3~"                  }
   - { key: F12,      mods: Command, chars: "\x1b[24;3~"                  }
   - { key: NumpadEnter,             chars: "\n"                          }
+  - { key: A,         mods: Alt,       chars: "\x1ba"                       }
+  - { key: B,         mods: Alt,       chars: "\x1bb"                       }
+  - { key: C,         mods: Alt,       chars: "\x1bc"                       }
+  - { key: D,         mods: Alt,       chars: "\x1bd"                       }
+  - { key: E,         mods: Alt,       chars: "\x1be"                       }
+  - { key: F,         mods: Alt,       chars: "\x1bf"                       }
+  - { key: G,         mods: Alt,       chars: "\x1bg"                       }
+  - { key: H,         mods: Alt,       chars: "\x1bh"                       }
+  - { key: I,         mods: Alt,       chars: "\x1bi"                       }
+  - { key: J,         mods: Alt,       chars: "\x1bj"                       }
+  - { key: K,        mods: Alt, action: ClearHistory                 }
+  - { key: K,        mods: Alt, chars: "\x0c"                        }
+  - { key: L,         mods: Alt,       chars: "\x1bl"                       }
+  - { key: M,         mods: Alt,       chars: "\x1bm"                       }
+  - { key: N,         mods: Alt,       chars: "\x1bn"                       }
+  - { key: O,         mods: Alt,       chars: "\x1bo"                       }
+  - { key: P,         mods: Alt,       chars: "\x1bp"                       }
+  - { key: Q,         mods: Alt,       chars: "\x1bq"                       }
+  - { key: R,         mods: Alt,       chars: "\x1br"                       }
+  - { key: S,         mods: Alt,       chars: "\x1bs"                       }
+  - { key: T,         mods: Alt,       chars: "\x1bt"                       }
+  - { key: U,         mods: Alt,       chars: "\x1bu"                       }
+  - { key: V,         mods: Alt,       chars: "\x1bv"                       }
+  - { key: W,         mods: Alt,       chars: "\x1bw"                       }
+  - { key: X,         mods: Alt,       chars: "\x1bx"                       }
+  - { key: Y,         mods: Alt,       chars: "\x1by"                       }
+  - { key: Z,         mods: Alt,       chars: "\x1bz"                       }
+  - { key: A,         mods: Alt|Shift, chars: "\x1bA"                       }
+  - { key: B,         mods: Alt|Shift, chars: "\x1bB"                       }
+  - { key: C,         mods: Alt|Shift, chars: "\x1bC"                       }
+  - { key: D,         mods: Alt|Shift, chars: "\x1bD"                       }
+  - { key: E,         mods: Alt|Shift, chars: "\x1bE"                       }
+  - { key: F,         mods: Alt|Shift, chars: "\x1bF"                       }
+  - { key: G,         mods: Alt|Shift, chars: "\x1bG"                       }
+  - { key: H,         mods: Alt|Shift, chars: "\x1bH"                       }
+  - { key: I,         mods: Alt|Shift, chars: "\x1bI"                       }
+  - { key: J,         mods: Alt|Shift, chars: "\x1bJ"                       }
+  - { key: K,         mods: Alt|Shift, chars: "\x1bK"                       }
+  - { key: L,         mods: Alt|Shift, chars: "\x1bL"                       }
+  - { key: M,         mods: Alt|Shift, chars: "\x1bM"                       }
+  - { key: N,         mods: Alt|Shift, chars: "\x1bN"                       }
+  - { key: O,         mods: Alt|Shift, chars: "\x1bO"                       }
+  - { key: P,         mods: Alt|Shift, chars: "\x1bP"                       }
+  - { key: Q,         mods: Alt|Shift, chars: "\x1bQ"                       }
+  - { key: R,         mods: Alt|Shift, chars: "\x1bR"                       }
+  - { key: S,         mods: Alt|Shift, chars: "\x1bS"                       }
+  - { key: T,         mods: Alt|Shift, chars: "\x1bT"                       }
+  - { key: U,         mods: Alt|Shift, chars: "\x1bU"                       }
+  - { key: V,         mods: Alt|Shift, chars: "\x1bV"                       }
+  - { key: W,         mods: Alt|Shift, chars: "\x1bW"                       }
+  - { key: X,         mods: Alt|Shift, chars: "\x1bX"                       }
+  - { key: Y,         mods: Alt|Shift, chars: "\x1bY"                       }
+  - { key: Z,         mods: Alt|Shift, chars: "\x1bZ"                       }
+  - { key: Key1,      mods: Alt,       chars: "\x1b1"                       }
+  - { key: Key2,      mods: Alt,       chars: "\x1b2"                       }
+  - { key: Key3,      mods: Alt,       chars: "\x1b3"                       }
+  - { key: Key4,      mods: Alt,       chars: "\x1b4"                       }
+  - { key: Key5,      mods: Alt,       chars: "\x1b5"                       }
+  - { key: Key6,      mods: Alt,       chars: "\x1b6"                       }
+  - { key: Key7,      mods: Alt,       chars: "\x1b7"                       }
+  - { key: Key8,      mods: Alt,       chars: "\x1b8"                       }
+  - { key: Key9,      mods: Alt,       chars: "\x1b9"                       }
+  - { key: Key0,      mods: Alt,       chars: "\x1b0"                       }
+  - { key: Space,     mods: Control,   chars: "\x00"                        } # Ctrl + Space
+  - { key: Grave,     mods: Alt,       chars: "\x1b`"                       } # Alt + `
+  - { key: Grave,     mods: Alt|Shift, chars: "\x1b~"                       } # Alt + ~
+  - { key: Period,    mods: Alt,       chars: "\x1b."                       } # Alt + .
+  - { key: Key8,      mods: Alt|Shift, chars: "\x1b*"                       } # Alt + *
+  - { key: Key3,      mods: Alt|Shift, chars: "\x1b#"                       } # Alt + #
+  - { key: Period,    mods: Alt|Shift, chars: "\x1b>"                       } # Alt + >
+  - { key: Comma,     mods: Alt|Shift, chars: "\x1b<"                       } # Alt + <
+  - { key: Minus,     mods: Alt|Shift, chars: "\x1b_"                       } # Alt + _
+  - { key: Key5,      mods: Alt|Shift, chars: "\x1b%"                       } # Alt + %
+  - { key: Key6,      mods: Alt|Shift, chars: "\x1b^"                       } # Alt + ^
+  - { key: Backslash, mods: Alt,       chars: "\x1b\\"                      } # Alt + \
+  - { key: Backslash, mods: Alt|Shift, chars: "\x1b|"                       } # Alt + |
+  - { key: N,         mods: Command,   command: { program: "open", args: ["-n", "/Applications/Alacritty.app"] } }
+  - { key: W,        mods: Command, command: { program: "/usr/local/bin/tmux", args: ["kill-window"] } }
+  - { key: T,        mods: Command, command: { program: "/usr/local/bin/tmux", args: ["new-window"] } }
+  - { key: Key1, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "1"] } }
+  - { key: Key2, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "2"] } }
+  - { key: Key3, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "3"] } }
+  - { key: Key4, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "4"] } }
+  - { key: Key5, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "5"] } }
+  - { key: Key6, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "6"] } }
+  - { key: Key7, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "7"] } }
+  - { key: Key8, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "8"] } }
+  - { key: Key9, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t", "9"] } }
+  - { key: LBracket, mods: Command|Shift, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t:-"] } }
+  - { key: RBracket, mods: Command|Shift, command: { program: "/usr/local/bin/tmux", args: ["select-window", "-t:+"] } }
+  - { key: A, mods: Command, chars: "\xE2\x8C\x98a" }
+  - { key: H, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-L"] } }
+  - { key: J, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-D"] } }
+  - { key: K, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-U"] } }
+  - { key: L, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-R"] } }
+  - { key: D,     mods: Command,       chars: "\x06\x76" } 
+  - { key: D,     mods: Command|Shift, chars: "\x06\x73" }
+  - { key: W,     mods: Command,       chars: "\x06\x78" }
+  - { key: H,     mods: Command,       chars: "\x06\x68" }
+  - { key: J,     mods: Command,       chars: "\x06\x6a" }
+  - { key: K,     mods: Command,       chars: "\x06\x6b" }
+  - { key: L,     mods: Command,       chars: "\x06\x6c" }
+  - { key: T,     mods: Command,       chars: "\x06\x63" }
+  - { key: Key1,  mods: Command,       chars: "\x06\x31" }
+  - { key: Key2,  mods: Command,       chars: "\x06\x32" }
+  - { key: Key3,  mods: Command,       chars: "\x06\x33" }
+  - { key: Key4,  mods: Command,       chars: "\x06\x34" }
+  - { key: Key5,  mods: Command,       chars: "\x06\x35" }
+  - { key: Key6,  mods: Command,       chars: "\x06\x36" }
+  - { key: Key7,  mods: Command,       chars: "\x06\x37" }
+  - { key: Key8,  mods: Command,       chars: "\x06\x38" }
+  - { key: Key9,  mods: Command,       chars: "\x06\x39" }
+  - { key: Left,  mods: Command,       chars: "\x06\x48" }
+  - { key: Down,  mods: Command,       chars: "\x06\x4a" }
+  - { key: Up,    mods: Command,       chars: "\x06\x4b" }
+  - { key: Right, mods: Command,       chars: "\x06\x4c" }
+  # - { key: K,        mods: Command, action: ClearHistory                 }
+  # - { key: K,        mods: Command, chars: "\x0c"                        }
