--- a/alacritty.yml
+++ b/alacritty.yml
@@ -596,13 +596,10 @@ key_bindings:
   - { key: J, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-D"] } }
   - { key: K, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-U"] } }
   - { key: L, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["select-pane", "-R"] } }
+  - { key: Y, mods: Command, command: { program: "/usr/local/bin/tmux", args: ["setw", "synchronize-panes"] } }
   - { key: D,     mods: Command,       chars: "\x06\x76" } 
   - { key: D,     mods: Command|Shift, chars: "\x06\x73" }
   - { key: W,     mods: Command,       chars: "\x06\x78" }
-  - { key: H,     mods: Command,       chars: "\x06\x68" }
-  - { key: J,     mods: Command,       chars: "\x06\x6a" }
-  - { key: K,     mods: Command,       chars: "\x06\x6b" }
-  - { key: L,     mods: Command,       chars: "\x06\x6c" }
   - { key: T,     mods: Command,       chars: "\x06\x63" }
   - { key: Key1,  mods: Command,       chars: "\x06\x31" }
   - { key: Key2,  mods: Command,       chars: "\x06\x32" }
