--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ setw -g pane-base-index 1
 
 #24bit color support
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 #Nvim cursor support
 set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
@@ -54,6 +54,7 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+bind y setw synchronize-panes
 
 #Moving between panes with vim movement keys
 bind h select-pane -L
@@ -87,6 +88,10 @@ resize-pane -D 15
 select-pane -t 1
 resize-pane -t 1 -Z # Zooms to pane 1
 
+bind Escape copy-mode
+
 #Use tmux plugin manager (end)
 run '~/.tmux/plugins/tpm/tpm'
+
+source ~/.dotfiles/tmux-theme.sh
 
